# claude-sessions

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PHASE2.md  PHASE3.md  PHASE3_COMPLETE.md  PHASE4.md  PHASE5.md  PHASE6.md  README.md  SUMMARY.md  TESTING.md  UI_COMPLETE_GUIDE.md  web-bridge.js
src/: client.rs  daemon.rs  ipc.rs  logging.rs  main.rs  manager.rs  persistence.rs  pty.rs  session.rs  tests.rs
ui/: CHAT_PREVIEW.md  IMPLEMENTATION.md  SETUP.md  UI_PREVIEW.md  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: daemon_client.rs  lib.rs
ui/src/components/: ChatViewer.css  ChatViewer.tsx  SessionCreator.css  SessionCreator.tsx  SessionList.tsx  TerminalViewer.tsx
