[package]
name = "claude-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
